# mcp-dm-gemini

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE.md  Release v0.1.md  SECURITY.md  bootstrap.sh  cli.py  config.json  design.md  docker-compose.yml  main.py  mcp_server.py  mcp_server_standalone.py  mcp_stdio.bat  mcp_stdio.sh  pyproject.toml  requirements.md  requirements.txt  run_main.bat  run_main.sh  start_server.bat  start_server.sh  tasks.md  test_mcp_server.py  test_personality_system.py  tools.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
config/: config.yaml
data/: README.md
discord_bot/: main.py
docs/: configuration.md  installation.md  usage.md
tests/: test_adaptive_pdf_processor.py  test_chromadb_manager.py  test_content_packager.py  test_discord_bot.py  test_embedding_service.py  test_main.py  test_mcp_server.py  test_pdf_parser.py  test_redis_manager.py  test_search_engine.py
ttrpg_assistant/: config_utils.py  logger.py
ttrpg_assistant/chromadb_manager/: __init__.py  manager.py
ttrpg_assistant/content_packager/: packager.py
ttrpg_assistant/data_models/: models.py  personality_models.py
ttrpg_assistant/embedding_service/: embedding.py
ttrpg_assistant/map_generator/: generator.py
ttrpg_assistant/mcp_server/: dependencies.py  server.py  tools.py
ttrpg_assistant/pdf_parser/: adaptive_processor.py  dynamic_pattern_learner.py  parser.py
ttrpg_assistant/personality_service/: __init__.py  personality_extractor.py  personality_manager.py
ttrpg_assistant/redis_manager/: manager.py
ttrpg_assistant/search_engine/: __init__.py  enhanced_search_service.py  hybrid_search.py  query_processor.py
web_ui/: add-rulebook.html  campaign.html  index.html  main.py  personality.html  search.html  session.html
web_ui/static/: script.js  style.css
